<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="strTitle">My Nanodegree Apps!</string>
    <string name="strStreamer">Spotify Streamer</string>
    <string name="strScores">Scores App</string>
    <string name="strLibrary">Library App</string>
    <string name="strBuildBigger">Build It Bigger</string>
    <string name="strXYZReader">XYZ Reader</string>
    <string name="strCapstone">Capstone - My Own App</string>
</resources>
