<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity"
             android:background="@color/activityBackground" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/strTitle"/>

            <Button
                android:id="@+id/btnSpotify"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strStreamer"
                android:onClick="onClickedSpotify"/>

            <Button
                android:id="@+id/btnScores"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strScores"
                android:onClick="onClickedScores"/>

            <Button
                android:id="@+id/btnLibrary"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strLibrary"
                android:onClick="onClickedLibrary"/>

            <Button
                android:id="@+id/btnBuildItBigger"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBuildBigger"
                android:onClick="onClickedBuildItBigger"/>

            <Button
                android:id="@+id/btnXYZReader"
                style="@style/AppButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strXYZReader"
                android:onClick="onClickedReader"/>

            <Button
                android:id="@+id/btnCapstone"
                style="@style/CapstoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCapstone"
                android:onClick="onClickedCapstone"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
